nutten koko lause tulee kuin vastaa oiken

--- a/Täydennys_peli.html
+++ b/Täydennys_peli.html
@@ -17,6 +17,7 @@
   <button onclick="showInput2()">Submit</button>
   
   <p id="output2"></p>
+  <p id="input"></p>
   <script src="Täydennys_peli.js"></script>
 </body>
 </html>
