vaihdoin tiedostojen nimet englanniksi

--- a/fill-in-the-blank.html
+++ b/fill-in-the-blank.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>User Input Example</title>
+  <link rel="stylesheet" href="fill-in-the-blank.css" />
 </head>
 <body>
-  <h2>User Input Example</h2>
+  <h2></h2>
 
-  <input type="text" id="userInput" placeholder="Type something..." />
   <button onclick="showInput()">Submit</button>
 
   <p id="output"></p>
 
   <input type="text" id="userInput2" placeholder="Type something..." />
-  <button onclick="showInput2()">Submit</button>
+  <button onclick="showInput2()">Answer</button> 
+  <button onclick="showInput3()" class="test" id="test">Show solution</button>
   
   <p id="output2"></p>
   <p id="input"></p>
-  <script src="Täydennys_peli.js"></script>
+
+  <script src="fill-in-the-blank.js"></script>
 </body>
 </html>
