kommentoin fill-in-the-blank tiedostot

--- a/lisää/add-own-sentences.html
+++ b/lisää/add-own-sentences.html
@@ -9,7 +9,7 @@
 <body>
   <h2>test</h2>
 
-  <button onclick="showInput()">Submit</button>
+  <button onclick="switchPage()">Submit</button>
   <input type="text" id="userInput" placeholder="Type something..." />
   <button onclick="addCentences()">Submit</button>
   <button onclick="resetOwnSentences()">Reset custom sentences</button>
