--- a/lisää/fill-in-the-blank.html
+++ b/lisää/fill-in-the-blank.html
@@ -8,25 +8,28 @@
 </head>
 <body>
   <h2></h2>
+  <!-- väli aikanen vaihtaa add-own-sentemces sivustolle -->
+  <button onclick="switchPage()">lisää omat lauseet</button>
 
-  <button onclick="showInput()">Submit</button>
-
+  <!-- näytetään sana ilman apu verbejä -->
   <p id="output"></p>
 
   <input type="text" id="userInput2" placeholder="Type something..." />
-  <button onclick="checkAnswer()">Answer</button> 
-  <button onclick="showAnswer()" class="test" id="test">Show solution</button>
+  <button onclick="checkAnswer()">Vastaa</button> 
+  <button onclick="showAnswer()" class="test" id="test">Näytä vastaus</button>
   
   <p id="output2"></p>
   <p id="input"></p>
 
-  <!-- Game Info Modal -->
-  <div id="gameModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:1000;">
-    <div style="background:#fff; max-width:400px; margin:10% auto; padding:2em; border-radius:8px; text-align:center;">
-      <h2>Welcome to the Fill-in-the-Blank Game!</h2>
-      <p>Fill in the missing word in each sentence.</p>
-      <button onclick="closeModal()">Start Game</button>
-      <button onclick="goToAddSentences()">Add Own Sentences</button>
+  <!-- annetaan käyttäjälle popup ilmoitus miten peli toimii-->
+  <div id="gameModal">
+    <div>
+      <h2>Tervetuloaa Täydennä puuttuva sana peliin!</h2>
+      <p>Sinun pitää täydentää tyhjät sanat jotka on apuverbit englanniksi.</p>
+      <p>Voit myös lisätä omia lauseita painamalla "lisää omat lauseet" nappia.</p>
+      <p>Jos vastauksessa on enemmän kuin yksi sana laita pilkku vastauksien väliin (vastaus1, vastuas2)</p>
+      <button onclick="closeModal()">Aloita peli</button>
+      <button onclick="switchPage()">Lisää omat lauseet</button>
     </div>
   </div>
 
