nytten voi lisätä monta lausettaa

--- a/lisää/add-own-sentences.html
+++ b/lisää/add-own-sentences.html
@@ -9,10 +9,14 @@
 <body>
   <h2>test</h2>
 
-  <button onclick="switchPage()">Submit</button>
-  <input type="text" id="userInput" placeholder="Type something..." />
-  <button onclick="addCentences()">Submit</button>
-  <button onclick="resetOwnSentences()">Reset custom sentences</button>
-  <script src="fill-in-the-blank.js"></script>
+  <button onclick="switchPage()">Valmis</button>
+  <p></p>
+  <div id="inputsContainer">
+    <input type="text" class="userInput" placeholder="Type something..." />
+  </div>
+  <p></p>
+  <button onclick="addInput()">+ uusi lause</button>
+
+  <script src="add-own-sentences.js"></script>
 </body>
 </html>
