--- a/lisää/add-own-sentences.html
+++ b/lisää/add-own-sentences.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>User Input Example</title>
-  <link rel="stylesheet" href="Täydennys_peli.css" />
+  <link rel="stylesheet" href="add-own-sentences.css"/>
 </head>
+
 <body>
   <h2>test</h2>
 
