updatasin add own sentences tyyliä

--- a/lisää/add-own-sentences.html
+++ b/lisää/add-own-sentences.html
@@ -8,16 +8,17 @@
 </head>
 
 <body>
-  <h2>test</h2>
 
-  <button onclick="switchPage()">Valmis</button>
-  <p></p>
-  <div id="inputsContainer">
-    <input type="text" class="userInput" placeholder="Type something..." />
+  <div class="card">
+    <div id="inputsContainer">
+      <input type="text" class="userInput" placeholder="Type something..." />
+    </div>
+
+    <button onclick="addInput()">+ uusi lause</button>
+    <button onclick="switchPage()">Valmis</button>
   </div>
-  <p></p>
-  <button onclick="addInput()">+ uusi lause</button>
 
   <script src="add-own-sentences.js"></script>
 </body>
+
 </html>
