--- a/Englanninkielen-oppimispeli/etusivu/main.html
+++ b/Englanninkielen-oppimispeli/etusivu/main.html
@@ -50,7 +50,7 @@
       </div>
       <div class="stage">
         <h3>Lisää puuttuvat apuverbit</h3>
-        <p>Testaa osaatko englannin apuverbit</p>
+        <p>Testaa osaatko englannin apuverbit.</p>
         <a href="../lisää/fill-in-the-blank.html" class="cta-button">Pelaa</a>
 
 
@@ -72,4 +72,5 @@
 
   
 </body>
+
 </html>
