--- a/Englanninkielen-oppimispeli/muistipeli/memory.html
+++ b/Englanninkielen-oppimispeli/muistipeli/memory.html
@@ -60,12 +60,12 @@
             grid-template-rows: repeat(6, 60px);
             align-self: center;
             padding-top: 10%;
-            gap: 5px;
+            gap: 25px;
         }
 
         .cell {
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             background: 
                 radial-gradient(circle at 30% 30%, #8b6b3d, #5c3d1e),
                 url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" fill="%235c3d1e"/><path d="M0 0L20 20" stroke="%234a2f15" stroke-width="1"/><path d="M20 0L0 20" stroke="%234a2f15" stroke-width="1"/></svg>');
@@ -77,7 +77,7 @@
             align-items: center;
             justify-content: center;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 12px;
             cursor: pointer;
             transition: all 0.3s;
             box-shadow: 
@@ -116,10 +116,9 @@
     <header class="main-header">
         <div class="container">
             <a href="../etusivu/index.html" class="logo">
-                <div style="width: 50px; height: 50px; background: #b89454; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px;">
-                    <span style="color: #5c3d1e; font-weight: bold; font-size: 24px;">M</span>
+                <div style="width: 200px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px;">
+                    <img src="../img/eduko.svg" alt="Front page button logo" height="192" width="216">
                 </div>
-                <span>Muistipeli</span>
             </a>
         </div>
     </header>
