--- a/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
+++ b/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
@@ -12,6 +12,8 @@
     <div id="inputsContainer">
       <input type="text" id="userInput" placeholder="Type something..." />
     </div>
+    
+    <div id="output"></div>
 
     <button id="startRecognition">Start Voice Recognition</button>
     <button id="stopRecognition">Stop Voice Recognition</button>
