upd ristisanapeli, reset nappi ja fixasin bugeja 2kpl
bugfixit:
sanat voi mennä päällekkäin korjattu
sanat voi valikoida muualta kuin halutuista paikoista

--- a/Englanninkielen-oppimispeli/ristisanapeli/ristisana.html
+++ b/Englanninkielen-oppimispeli/ristisanapeli/ristisana.html
@@ -101,6 +101,7 @@
 <div id="controls">
   <button id="confirm">Confirm Word</button>
   <button id="reset">Reset Selection</button>
+  <button id="restart">Restart Game</button>
 </div>
 
 <p id="message"></p>
