--- a/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.html
+++ b/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.html
@@ -10,10 +10,7 @@
 
 <body>
   <div class="game-box">
-    <div style="text-align:center; margin-top:28px;">
-      <button id="addOwnBtn" onclick="switchPage()">lisää omat lauseet</button>
-    </div>
-
+    
     <h2></h2>
 
     <!-- näytetään sana ilman apu verbejä -->
@@ -25,6 +22,11 @@
     
     <p id="output2"></p>
     <p id="input"></p>
+
+    <div style="text-align:center; margin-top:28px;">
+      <button id="addOwnBtn" class="hidden" onclick="switchPage()">lisää omat lauseet</button>
+      <button id="showModel" class="hidden" onclick="showModel()">Aloita alusta</button>
+    </div>
   </div>
 
   <!-- annetaan käyttäjälle popup ilmoitus miten peli toimii-->
