--- a/Englanninkielen-oppimispeli/lisää/add-own-sentences.html
+++ b/Englanninkielen-oppimispeli/lisää/add-own-sentences.html
@@ -10,14 +10,24 @@
 
 <body>
 
+<div id="cardsContainer" class="card">
   <div class="card">
-    <div id="inputsContainer">
+    <div class="inputsContainer">
       <input type="text" class="userInput" placeholder="Type something..." />
     </div>
-
-    <button onclick="addInput()">+ uusi lause</button>
-    <button onclick="switchPage()">Valmis</button>
+    <div class="btnGroup">
+      <button class="add_btn" onclick="addCard()">+</button>
+      <button class="del_btn" onclick="removeCard()">-</button>
+    </div>
   </div>
+</div>
+
+
+
+<div class="card">   
+  <button onclick="switchPage()">Valmis</button>
+</div>
+
 
   <script src="add-own-sentences.js"></script>
 </body>
