--- a/Englanninkielen-oppimispeli/etusivu/index.html
+++ b/Englanninkielen-oppimispeli/etusivu/index.html
@@ -40,14 +40,14 @@
         <a href="#" class="cta-button">Tulossa pian</a>
       </div>
       <div class="stage">
-        <h3>Kysymykset</h3>
+        <h3>lisää apuverbi</h3>
         <p>Testaa osaamistasi monivalintakysymyksillä.</p>
-        <a href="#" class="cta-button">Tulossa pian</a>
+        <a href="../lisää/fill-in-the-blank.html" class="cta-button">Tulossa pian</a>
       </div>
       <div class="stage">
-        <h3>Kuunteluharjoitus</h3>
+        <h3>Lausumis harjoitus</h3>
         <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
-        <a href="#" class="cta-button">Tulossa pian</a>
+        <a href="../äänitunnistus/voice-recognition.html" class="cta-button">Tulossa pian</a>
       </div>
     </div>
   </section>
