emojit otin pois

--- a/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
+++ b/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="game-box">
-    <h2>🎙️ Pronunciation Game</h2>
+    <h2>Pronunciation Game</h2>
     <div id="targetWord">Press "New Word"!</div>
     <input type="text" id="userInput" readonly placeholder="Your speech will appear here..." />
     <div id="output"></div>
