korjasin aloitus infon

--- a/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.html
+++ b/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.html
@@ -17,7 +17,7 @@
     <p id="output"></p>
 
     <input type="text" id="userInput" placeholder="Type something..." />
-    <button onclick="checkAnswer()">Vastaa</button> 
+    <button onclick="checkAnswer()"id="checkAnswer">Vastaa</button> 
     <button onclick="showAnswer()" class="hidden" id="vastaus">Näytä vastaus</button>
     
     <p id="output2"></p>
