--- a/Englanninkielen-oppimispeli/etusivu/index.html
+++ b/Englanninkielen-oppimispeli/etusivu/index.html
@@ -35,9 +35,9 @@
         <a href="../muistipeli/memory.html" class="cta-button">Pelaa</a>
       </div>
       <div class="stage">
-        <h3>Sanapeli</h3>
+        <h3>Ristisanapeli</h3>
         <p>Kokeile taitojasi yhdistämällä sanoja ja merkityksiä.</p>
-        <a href="#" class="cta-button">Tulossa pian</a>
+        <a href="../ristisanapeli/ristisana.html" class="cta-button">Tulossa pian</a>
       </div>
       <div class="stage">
         <h3>Kysymykset</h3>
