lisäsin info-napin

--- a/Englanninkielen-oppimispeli/ristisanapeli/ristisana.html
+++ b/Englanninkielen-oppimispeli/ristisanapeli/ristisana.html
@@ -101,6 +101,9 @@
   <button id="confirm">Confirm Word</button>
   <button id="reset">Reset Selection</button>
   <button id="restart">Restart Game</button>
+  <button id="info">
+    <img src ="../img/24x24-information-button.png" alt="info-button" width="12" height="12">
+  </button>
 </div>
 
 <p id="message"></p>
