--- a/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
+++ b/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
@@ -33,7 +33,7 @@
 <!-- WIN MODAL -->
 <div id="winModal" class="gameModal" style="display: none;">
   <div class="modal-content">
-    <h2 id="winTitle">🎉 You Won! 🎉</h2>
+    <h2 id="winTitle">You Won! </h2>
     <p id="winText"></p>
     <button onclick="restartGame()">Play Again</button>
   </div>
