lisäsin kaikki pelit mainiin

--- a/Englanninkielen-oppimispeli/etusivu/index.html
+++ b/Englanninkielen-oppimispeli/etusivu/index.html
@@ -40,14 +40,24 @@
         <a href="../ristisanapeli/ristisana.html" class="cta-button">Tulossa pian</a>
       </div>
       <div class="stage">
-        <h3>Kysymykset</h3>
+        <h3>Kuukausipeli</h3>
         <p>Testaa osaamistasi monivalintakysymyksillä.</p>
-        <a href="#" class="cta-button">Tulossa pian</a>
+        <a href="../kuukausipeli/index.html" class="cta-button">Tulossa pian</a>
       </div>
       <div class="stage">
-        <h3>Kuunteluharjoitus</h3>
+        <h3>sanapeli</h3>
         <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
-        <a href="#" class="cta-button">Tulossa pian</a>
+        <a href="../sanapeli/sanapeli.html" class="cta-button">Tulossa pian</a>
+      </div>
+      <div class="stage">
+        <h3>apuverbipeli</h3>
+        <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
+        <a href="../lisää/fill-in-the-blank.html" class="cta-button">Tulossa pian</a>
+      </div>
+      <div class="stage">
+        <h3>pehumispeli</h3>
+        <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
+        <a href="" class="cta-button">Tulossa pian</a>
       </div>
     </div>
   </section>
