--- a/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
+++ b/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
@@ -16,7 +16,7 @@
 
     <button onclick="setNewWord()">New Word</button>
     <button onclick="startRecognition()" id="onOffbtn">Start</button>
-    <button onclick="testsound()">test</button>
+    <button onclick="stopRecognition()" id="onOffbtn">Stop</button>
   </div>
 
    <div id="gameModal" class="gameModal">
