--- a/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.html
+++ b/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.html
@@ -15,6 +15,8 @@
 
     <!-- näytetään sana ilman apu verbejä -->
     <p id="output"></p>
+    <p id="hint" style="font-style: italic; color: #d0c58a;"></p>
+
 
     <input type="text" id="userInput" placeholder="Type something..." />
     <button onclick="checkAnswer()"id="checkAnswer">Vastaa</button> 
