--- a/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
+++ b/Englanninkielen-oppimispeli/äänitunnistus/voice-recognition.html
@@ -20,13 +20,16 @@
   </div>
 
    <div id="gameModal" class="gameModal">
-    <div>
-      <h2>Tervetuloaa peliin!</h2>
-      <p></p>
-      <p></p>
-      <p></p>
-      <button onclick="closeModal()">Aloita peli</button>
-    </div>
+  <div>
+    <h2>Tervetuloa peliin!</h2>
+    <p>Tässä pelissä harjoittelet englannin ääntämistä. Peli antaa sinulle sanan tai lauseen, ja sinun tehtäväsi on sanoa se ääneen mahdollisimman tarkasti.</p>
+    <p>Paina ensin <strong>"New Word"</strong> saadaksesi uuden sanan tai lauseen, jonka sinun pitää lausua.</p>
+    <p>Sen jälkeen paina <strong>"Start"</strong> aloittaaksesi puheen tunnistuksen. Puhu selkeästi englanniksi ja odota, että peli näyttää mitä sanoit.</p>
+    <p>Jos ääntäminen on oikein, saat vihreän ilmoituksen ja pienen äänimerkin. Jos ei, voit yrittää uudelleen painamalla "Start" uudestaan.</p>
+    <button onclick="closeModal()">Aloita peli</button>
+  </div>
+</div>
+
   </div>
 
   
