--- a/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.html
+++ b/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.html
@@ -12,7 +12,7 @@
 <body>
   <header class="main-header">
     <div class="container">
-        <a href="../etusivu/index.html" class="logo">
+        <a onclick="showMenu()" class="logo">
             <div style="width: 200px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px;">
                 <img src="../img/eduko.svg" alt="Front page button logo" height="192" width="216">
             </div>
@@ -20,6 +20,12 @@
     </div>
 </header>
 
+  <div id="menuOverlay"></div>
+  <div id="menuModal">
+    <h2></h2>
+    <button id="restartBtn">🔁 Aloita uudestaan</button>
+    <button id="menuToMenuBtn">🏠 Palaa valikkoon</button>
+  </div>
 
   <div class="game-box">
     
@@ -27,7 +33,7 @@
 
     <!-- näytetään sana ilman apu verbejä -->
     <p id="output"></p>
-     <p id="hint" style="font-style: italic; color: #d0c58a;"></p>
+    <p id="hint" style="font-style: italic; color: #d0c58a;"></p>
 
     <input type="text" id="userInput" placeholder="Type something..." />
     <button onclick="checkAnswer()"id="checkAnswer">Vastaa</button> 
@@ -48,7 +54,7 @@
       <h2>Tervetuloaa Täydennä puuttuva sana peliin!</h2>
       <p>Sinun pitää täydentää tyhjät sanat jotka on apuverbit englanniksi.</p>
       <p>Voit myös lisätä omia lauseita painamalla "lisää omat lauseet" nappia.</p>
-      <p>Jos vastauksessa on enemmän kuin yksi sana laita pilkku vastauksien väliin (vastaus1, vastuas2)</p>
+      <p>Jos vastauksessa on enemmän kuin yksi sana laita väli vastauksien väliin (vastaus1 vastuas2)</p>
       <button onclick="closeModal()">Aloita peli</button>
     </div>
   </div>
@@ -57,7 +63,7 @@
   <!-- WIN MODAL -->
 <div id="winModal" class="gameModal" style="display: none;">
   <div class="modal-content">
-    <h2 id="winTitle">🎉 You Won! 🎉</h2>
+    <h2 id="winTitle">You Won!</h2>
     <p id="winText"></p>
     <button onclick="restartGame()">Play Again</button>
   </div>
