pistin gridiks noi etusivun jutut

--- a/Englanninkielen-oppimispeli/etusivu/index.html
+++ b/Englanninkielen-oppimispeli/etusivu/index.html
@@ -29,26 +29,33 @@
   <section id = "info" class="info">
     <p>Valitse pelimuoto ja lähde oppimaan:</p>
     <div class="stages">
+      
       <div class="stage">
         <h3>Muistipeli</h3>
         <p>Harjoittele sanastoa pelaamalla muistipeliä.</p>
         <a href="../muistipeli/memory.html" class="cta-button">Pelaa</a>
       </div>
       <div class="stage">
-        <h3>Ristisanapeli</h3>
-        <p>Kokeile taitojasi yhdistämällä sanoja ja merkityksiä.</p>
-        <a href="../ristisanapeli/ristisana.html" class="cta-button">Tulossa pian</a>
+        <h3>Muistipeli</h3>
+        <p>Harjoittele sanastoa pelaamalla Ristisana peliä</p>
+        <a href="../ristisanapeli/ristisana.html" class="cta-button">Pelaa</a>
       </div>
       <div class="stage">
-        <h3>Kysymykset</h3>
+        <h3>Kuukausipeli</h3>
         <p>Testaa osaamistasi monivalintakysymyksillä.</p>
-        <a href="#" class="cta-button">Tulossa pian</a>
+        <a href="../kuukausipeli/index.html" class="cta-button">Tulossa pian</a>
       </div>
       <div class="stage">
-        <h3>Kuunteluharjoitus</h3>
+        <h3>sanapeli</h3>
         <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
-        <a href="#" class="cta-button">Tulossa pian</a>
+        <a href="../sanapeli/sanapeli.html" class="cta-button">Tulossa pian</a>
       </div>
+      <div class="stage">
+        <h3>apuverbipeli</h3>
+        <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
+        <a href="../lisää/fill-in-the-blank.html" class="cta-button">Tulossa pian</a>
+      </div>
+
     </div>
   </section>
 
