--- a/Englanninkielen-oppimispeli/etusivu/index.html
+++ b/Englanninkielen-oppimispeli/etusivu/index.html
@@ -29,6 +29,7 @@
   <section id = "info" class="info">
     <p>Valitse pelimuoto ja lähde oppimaan:</p>
     <div class="stages">
+      
       <div class="stage">
         <h3>Muistipeli</h3>
         <p>Harjoittele sanastoa pelaamalla muistipeliä.</p>
@@ -47,6 +48,7 @@
       <div class="stage">
         <h3>sanapeli</h3>
         <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
+        <a href="#" class="cta-button">Tulossa pian</a>
         <a href="../sanapeli/sanapeli.html" class="cta-button">Tulossa pian</a>
       </div>
       <div class="stage">
