--- a/Englanninkielen-oppimispeli/muistipeli/memory.html
+++ b/Englanninkielen-oppimispeli/muistipeli/memory.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muistipeli</title>
+    <link rel="stylesheet" href="../theme.css"/>
     <style>
         body {
             background: 
@@ -160,9 +161,26 @@
 }
 
     </style>
+    
 </head>
 
 <body>
+    <header class="main-header">
+    <div class="container">
+        <a onclick="showMenu()" class="logo">
+            <div style="width: 200px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px;">
+                <img src="../img/eduko.svg" alt="Front page button logo" height="192" width="216">
+            </div>
+        </a>
+    </div>
+</header>
+
+  <div id="menuOverlay"></div>
+  <div id="menuModal">
+    <h2></h2>
+    <button onclick="resetGame()" id="restartBtn">🔁 Aloita uudestaan</button>
+    <button onclick="homePage()"id="menuToMenuBtn">🏠 Palaa valikkoon</button>
+  </div>
 
     <div id="winModal" class="winModal">
         <div>
@@ -175,17 +193,6 @@
         </a>
         </div>
     </div>
-
-
-    <header class="main-header">
-        <div class="container">
-            <a href="../etusivu/index.html" class="logo">
-                <div style="width: 200px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px;">
-                    <img src="../img/eduko.svg" alt="Front page button logo" height="192" width="216">
-                </div>
-            </a>
-        </div>
-    </header>
 
     
 
