--- a/Englanninkielen-oppimispeli/etusivu/index.html
+++ b/Englanninkielen-oppimispeli/etusivu/index.html
@@ -5,24 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Englanninkielen oppimispeli</title>
+  <link rel="stylesheet" href="../theme.css">
   <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <!-- Header -->
   <header class="main-header">
     <div class="container">
-      <a href="index.html" class="logo">
-        <img src="../img/eduko.svg" alt="Front page button logo" height="192" width="216">
-      </a>
+        <a onclick="showMenu()" class="logo">
+            <div style="width: 200px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px;">
+                <img src="../img/eduko.svg" alt="Front page button logo" height="192" width="216">
+            </div>
+        </a>
     </div>
-  </header>
+</header>
 
   <!-- Hero Section -->
   <section class="hero">
     <h1>Englanninkielen oppimispeli</h1>
     <p>Tervetuloa harjoittelemaan englannin kieltä hauskojen ja vuorovaikutteisten pelien avulla!</p>
-    <a href="#info" class="cta-button">Aloita pelaaminen</a>
   </section>
 
   <!-- Info / Stages Section -->
@@ -55,22 +56,14 @@
         <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
         <a href="../lisää/fill-in-the-blank.html" class="cta-button">Tulossa pian</a>
       </div>
+      <div class="stage">
+        <h3>puhekielipeli</h3>
+        <p>Harjoittele kuullun ymmärtämistä englanniksi.</p>
+        <a href="../äänitunnistus/voice-recognition.html" class="cta-button">Tulossa pian</a>
+      </div>
 
     </div>
   </section>
-
-  <!-- Footer -->
-  <footer class="main-footer">
-    <div class="container">
-      <p>&copy; 2025 Englanninkielen oppimispeli</p>
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-      </div>
-    </div>
-  </footer>
-
   
 </body>
 </html>
